@@ -1,5 +1,12 @@
 Revision history for DBD::Oracle
 
+1.NN next release
+
+  [MISCELLANEOUS]
+
+  - Added a trouble shooting entry for RT71819 - bound output
+    parameters may be returned in the wrong order.
+
 1.45_00   2012-06-21
 
  [CHANGE IN BEHAVIOUR]
